This file documents the revision history for Perl extension Mojolicious.

2.62    2012-03-14 00:00:00
        - Improved documentation.

2.61    2012-03-14 00:00:00
        - Merged Mojolicious exception handling into the around_dispatch
          hook, this will allow a whole new category of exception handling
          plugins.
        - Improved documentation.

2.60    2012-03-13 00:00:00
        - Added EXPERIMENTAL current_route helper to
          Mojolicious::Plugin::DefaultHelpers.
        - Made text_area helper a little smarter. (sshaw, sri)
        - Improved inactivity timeout logging for WebSockets.
        - Improved documentation.
        - Improved tests.
        - Fixed escaping bug in select_field and text_area helpers.
        - Fixed Windows bug in "asset.t".

2.59    2012-03-09 00:00:00
        - Removed duplicate 2.58 directory.

2.58    2012-03-09 00:00:00
        - Added support for MOJO_LISTEN environment variable.
        - Removed listen attribute from Mojo::Server::Morbo.
        - Improved event loop compatibility of Mojo::Server::PSGI.
        - Improved documentation.
        - Improved tests.
        - Fixed Mojo::URL object handling bug in url_for.
        - Fixed bug in Hypnotoad that prevented disabling of reverse proxy
          support between zero downtime software upgrades.
        - Fixed small caching bug in Morbo file watcher.
        - Fixed Windows bug in "asset.t".

2.57    2012-03-03 00:00:00
        - Replaced protection from excessively large form values in
          Mojo::Message with documentation.
        - Improved documentation.

2.56    2012-03-01 00:00:00
        - Deprecated custom HTTPS listen values in favor of URLs for all
          built-in web servers.
            https://*:3000:/x/server.crt:/y/server.key:/z/ca.crt
          becomes
            https://*:3000?cert=/x/server.crt&key=/y/server.key&ca=/z/ca.crt
        - Removed experimental status from patch function in
          Mojolicious::Lite.