@@ -2,6 +2,7 @@ This file documents the revision history for Perl extension Mojolicious.
 
 2.62    2012-03-14 00:00:00
         - Improved documentation.
+        - Improved tests.
 
 2.61    2012-03-14 00:00:00
         - Merged Mojolicious exception handling into the around_dispatch
